package service;

public interface IServiceATM {

    void procesarRetiro(String dni, String contrasenia, Integer montoARetirar);
}
